--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "@types/react": "^17.0.2",
     "bootstrap": "^4.6.0",
     "eslint-plugin-prettier": "^3.3.1",
     "node-sass": "^5.0.0",
