--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-prop-types": "^1.0.5",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
+    "shortid": "^2.2.16",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
