--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "@types/react": "^17.0.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "eslint-plugin-prettier": "^3.3.1",
     "formik": "^2.2.6",
