--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,9 @@
   },
   "globals": {
     "window": true,
-    "document": true
+    "document": true,
+    "localStorage": true,
+    "fetch": true
   },
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
