--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react": "^17.0.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "config": "^3.3.6",
     "eslint-plugin-prettier": "^3.3.1",
     "formik": "^2.2.6",
+    "history": "^5.0.0",
+    "local-storage": "^2.0.0",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
